<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.mangasite</groupId>
	<artifactId>manga-backend</artifactId>
	<version>3.0.0</version>
	<name>MangaBackend</name>
	<description>RSocket API for Manga-Spring Site</description>
	<properties>
		<java.version>19</java.version>
		<avaje.inject.version>8.9</avaje.inject.version>
		<mainClass>com.mangasite.MangaBackendApplication</mainClass>
		<start-class>com.mangasite.MangaBackendApplication</start-class>
		<spring.native.version>0.12.1</spring.native.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver-sync</artifactId>
			<version>4.7.1</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin</artifactId>
			<version>4.6.4</version>
		</dependency>

		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject</artifactId>
			<version>${avaje.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-config</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-api</artifactId>
			<version>1.17</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<scope>runtime</scope>
		</dependency>


		<!-- Boot Dependencies -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.yaml</groupId>
					<artifactId>snakeyaml</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.projectreactor.addons</groupId>
			<artifactId>reactor-extra</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.security</groupId>
					<artifactId>spring-security-web</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- RSocket Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-rsocket</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-rsocket</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-messaging</artifactId>
		</dependency>

		<!--/Boot Dependencies -->

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>

		<!-- GraalVM Stuff -->
		<dependency>
			<groupId>org.springframework.experimental</groupId>
			<artifactId>spring-native</artifactId>
			<version>${spring.native.version}</version>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.experimental</groupId>
				<artifactId>spring-aot-maven-plugin</artifactId>
				<version>${spring.native.version}</version>
				<executions>
					<execution>
						<id>generate</id>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} --enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<skipSortingImports>true</skipSortingImports>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>-XDcompilePolicy=simple</arg>
						<arg>-Xplugin:ErrorProne</arg>
					</compilerArgs>
					<annotationProcessorPaths>
						<path>
							<groupId>com.google.errorprone</groupId>
							<artifactId>error_prone_core</artifactId>
							<version>2.15.0</version>
						</path>
						<path>
							<groupId>io.avaje</groupId>
							<artifactId>avaje-inject-generator</artifactId>
							<version>${avaje.inject.version}</version>
						</path>
						<path>
							<groupId>io.avaje</groupId>
							<artifactId>avaje-http-javalin-generator</artifactId>
							<version>1.17</version>
						</path>
						<path>
							<groupId>io.avaje</groupId>
							<artifactId>avaje-http-client-generator</artifactId>
							<version>1.17</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.24</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin> <!--Enforcecorrectloggingframework-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>de.skuzzle.enforcer</groupId>
						<artifactId>restrict-imports-enforcer-rule</artifactId>
						<version>2.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>enforce</id>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions />
								<bannedDependencies>
									<excludes>
										<!--slf4jshouldbeusedinstead-->
										<exclude>commons-logging:commons-logging</exclude>
										<exclude>commons-logging:commons-logging-api</exclude>
										<exclude>org.apache.logging.log4j:log4j-core</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
						</configuration>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
					<execution>
						<id>check-imports</id>
						<phase>process-sources</phase>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<RestrictImports>
									<reason>UseSLF4jforlogging</reason>
									<bannedImports>
										<bannedImport>java.util.logging.**</bannedImport>
										<bannedImport>org.apache.commons.logging.**</bannedImport>
										<bannedImport>org.apache.logging.log4j.**</bannedImport>
									</bannedImports>
									<basePackages>
										<basePackage>com.jojo.**</basePackage>
									</basePackages>
									<includeTestCode>false</includeTestCode>
								</RestrictImports>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>spring-release</id>
			<name>Spring release</name>
			<url>https://repo.spring.io/release</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-libs-milestone</id>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</pluginRepository>
		<pluginRepository>
			<id>spring-release</id>
			<name>Spring release</name>
			<url>https://repo.spring.io/release</url>
		</pluginRepository>
	</pluginRepositories>
</project>